--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,76 @@
-alembic==1.7.7
-attrs==21.4.0
-autopep8==1.6.0
+alembic==1.5.4
+appnope==0.1.3
+asttokens==2.2.1
+autopep8==1.5.5
+backcall==0.2.0
+beautifulsoup4==4.12.2
 blinker==1.4
-certifi==2021.10.8
-chardet==4.0.0
-charset-normalizer==2.0.12
-click==8.1.2
-Flask==2.1.1
-Flask-Migrate==3.1.0
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.3
-gunicorn==20.1.0
-idna==3.3
-importlib-metadata==4.11.3
-iniconfig==1.1.1
-itsdangerous==2.1.2
-Jinja2==3.1.1
-Mako==1.2.0
-MarkupSafe==2.1.1
-packaging==21.3
+bs4==0.0.1
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+comm==0.1.3
+coverage==7.2.4
+debugpy==1.6.7
+decorator==5.1.1
+dominate==2.5.2
+exceptiongroup==1.1.1
+executing==1.2.0
+Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
+Flask-CKEditor==0.4.4.1
+Flask-Cors==3.0.10
+Flask-Migrate==2.6.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+idna==2.10
+iniconfig==2.0.0
+ipykernel==6.22.0
+ipython==8.13.1
+itsdangerous==1.1.0
+jedi==0.18.2
+Jinja2==2.11.2
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+Mako==1.1.4
+MarkupSafe==1.1.1
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
+numpy==1.24.2
+packaging==23.1
+pandas==2.0.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==3.5.0
 pluggy==1.0.0
-psycopg2-binary==2.9.4
-py==1.11.0
-pycodestyle==2.8.0
-pyparsing==3.0.7
-pytest==7.1.1
-python-dateutil==2.8.2
-python-dotenv==0.20.0
+prettytable==3.6.0
+prompt-toolkit==3.0.38
+psutil==5.9.5
+psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycodestyle==2.6.0
+Pygments==2.15.1
+pytest==7.3.1
+pytest-cov==2.12.1
+python-dateutil==2.8.1
+python-dotenv==0.15.0
 python-editor==1.0.4
-requests==2.27.1
-six==1.16.0
-SQLAlchemy==1.4.35
+pytz==2023.3
+pyzmq==25.0.2
+requests==2.24.0
+six==1.15.0
+soupsieve==2.4
+SQLAlchemy==1.3.19
+stack-data==0.6.2
 toml==0.10.2
 tomli==2.0.1
-urllib3==1.26.9
-Werkzeug==2.1.1
-zipp==3.7.0
+tornado==6.3.1
+traitlets==5.9.0
+tzdata==2023.3
+urllib3==1.25.10
+visitor==0.1.3
+wcwidth==0.2.6
+Werkzeug==1.0.1
+WTForms==2.3.3
