--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 coverage==7.2.5
+dominate==2.8.0
 Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
 Flask-Cors==3.0.10
 Flask-Migrate==2.6.0
 Flask-SQLAlchemy==2.4.4
@@ -34,4 +36,5 @@ SQLAlchemy==1.3.23
 toml==0.10.2
 tomli==2.0.1
 urllib3==1.26.5
+visitor==0.1.3
 Werkzeug==1.0.1
